<resources>
    <string name="app_name">Basketball Court Counter</string>
    <string name="action_about_the_game">About The Game</string>
    <string name="action_about_the_app">About The App</string>
    <string name="title_activity_about_the_app">About The App</string>
    <string name="title_activity_about_the_game">About The Game</string>
    <string name="title_activity_splash">Splash</string>
    <string name="version">Version 1.0</string>


    <string name="heading_Basketball">Basketball</string>

    <string name="basketball_text">
        "Basketball is a sport, generally played by two teams of five players on a rectangular"
        "court. The objective is to shoot a ball through a hoop 18 inches (46 cm) in diameter and"
        "mounted at height of 10 feet (3.048 m) to a backboards at each end of the court."
    </string>

    <string name="heading_Scoring">Scoring</string>

    <string name="Scoring_text">
        "A team can score a field goal by shooting the ball through the basket being defended by"
        "the opposition team during regular play. A field goal scores three points for the shooting"
        "team if the player shoots from behind the three-point line,and two points if shot from in"
        "front of the line. A team can also score via free throws, which are worth one point, after"
        "the other team is assessed with certain fouls."
        "The team with the most points at the end of the game wins, but additional time (overtime)"
        "is issued when the score is tied at the end of regulation."
        "The ball can be advanced on the court by throwing it to a teammate, or by bouncing it while"
        "walking or running (dribbling). It is a violation to lift, or drag, one's pivot foot "
        "without dribbling the ball,to carry it, or to hold the ball with both hands then resume dribbling."
    </string>

    <string name="heading_Techniques">Techniques</string>

    <string name="Techniques_text">
        "There are many techniques for ball handling, shooting, passing, dribbling and rebounding."
        "Basketball teams generally have player positions, the tallest and strongest members of"
        "a team are called a center or power forward, while slightly shorter and more agile players"
        "are called small forward, and the shortest players or those who possess the best ball"
        "handling skills are called a point guard or shooting guard. The point guard directs the on"
        "court action of the team, implementing the coach's game plan, and managing the execution"
        "of offensive and defensive plays (player positioning)."
    </string>

    <string name="heading_rating">Rating</string>

    <string name="rating_text">
        "Basketball is one of the world's most popular and widely viewed sports."
        "The National Basketball Association (NBA) is the most popular and widely considered to be"
        "the highest level of professional basketball in the world and NBA players are the world's"
        "best paid sportsmen, by average annual salary per player. Outside North America,"
        "the top clubs from national leagues qualify to continental championships such as the"
        "Euroleague and FIBA Americas League. The FIBA Basketball World Cup attracts the top"
        "national teams from around the world. Each continent hosts regional competitions for"
        "national teams, like EuroBasket and FIBA Americas Championship."
    </string>

    <string name="heading_women_basketball">Women Basketball</string>

    <string name="women_basketball_text">
        "The FIBA Women's Basketball World Cup features the top national women's basketball teams"
        "from continental championships. The main North American league is the WNBA, whereas the"
        "EuroLeague Women has been dominated by teams from the Russian Women's Basketball Premier League."
    </string>

    <string name="about_the_app">"This app was developed from Google's Android for beginners course on Udacity. It is meant for learning purpose to demonstrate lessons learnt on the course"\n\n
    "You can contact the developer via email: isaac.marcus@minna.gdg.ng or djzichat@gmail.com. He would definitely love to hear from you! Feel free to share this app with friends."
   </string>
</resources>
